--- a/myapp/package.json
+++ b/myapp/package.json
@@ -12,14 +12,11 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "pg": "^8.11.0"
-  },
-  "scripts": {
-    "start": "nodemon ./bin/www"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-  
 }
